# ood-saliency-aggregation

./: README.md  main.py  pyproject.toml
src/: resnet18_32_patched.py  salagg_plus_mls.py  utils.py
