[project]
name = "ood-saliency-aggregation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "captum>=0.8.0",
    "cython>=3.2.3",
    "foolbox>=3.3.4",
    "libmr>=0.1.9",
    "numpy>=1.26.4",
    "openood",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "timm>=1.0.22",
    "torch>=2.9.1",
]
[tool.uv.extra-build-dependencies]
  libmr = ["numpy", "cython"]

[tool.uv.sources]
openood = { git = "https://github.com/Jingkang50/OpenOOD", rev = "3c35632" }
